--- a/src/content/posts/vuelo.mdx
+++ b/src/content/posts/vuelo.mdx
@@ -13,6 +13,7 @@ tags: ["Cuentos"]
 
 Un hormigón dorado volaba a ras de suelo bajo las sombras de los árboles y de las rocas gigantes de la quebrada. En ese oculto lugar de la montaña, alejado de los vientos, carente de huellas y repleto de verdes profundos vivía este alado en su hormiguero. Sobre ese suelo tranquilo y tapado de hojas, aparecían además de las hormigas, unas criaturas muy peculiares y conocidas por los bichos como Semiseres. Les llamaban así porque a veces y a diferencia de todxs lxs demás seres, podían súbitamente dejar de existir durante periodos indeterminados. Los hormigones hablaban con estos semiseres que aunque de tamaños variados, eran más pequeños que las hormigas obreras que se sentían tranquilas y motivadas cada vez que estos visitantes aparecían para verles trabajar. 
 
+<img className="w-[90%] mx-auto" src='https://xvifyrqivqsozuhckqte.supabase.co/storage/v1/object/sign/Images/_MG_3709.jpg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1cmwiOiJJbWFnZXMvX01HXzM3MDkuanBnIiwiaWF0IjoxNzE5Njk0NzE4LCJleHAiOjIwMzUwNTQ3MTh9.OmCWGuDjkXBsgDr_YTgOn0xYGhvnfX7rd2Y9-bY-bcc'/>
 
 El alado quería hacer otras cosas, quería disfrutar de sus alas para volar por la sierra y verla desde lo alto, observar sus cambios, conocer otros bichos y ayudar en las asambleas, pero nada de eso estaba permitido, sólo trabajar y nada más que trabajar: "si no trabajamos moriremos" repetían las hormigas, y sobre esa idea seguían su marcha laboral sin parar un segundo de hacer cosas. Cada vez que el alado volvía a la colonia, era recibido por un montón de obreras exigiéndole tareas de exploración o protección, a veces incluso recibía la orden molecular, para levantar cosas pesadas y así liberarles de trabajo extra. El hormigón no podía hacer nada ante esas moléculas, cuando recibía una su cuerpo simplemente obedecía. 
 
@@ -25,6 +26,9 @@ El hormigón estaba viviendo un vuelo tan intenso, que no se había dado cuenta 
 
 A veces notaba lagunas mentales y viajaban por esos sitios, que también eran momentos, con espacios en que sus neuronas dejaban de trabajar o de enviar algún tipo de señal, al regresar, volvía con un puñado de alegría que lo despertaba: —Esto! esto era lo que deseaba! por fin he dejado de trabajar!—. Su existencia variaba tal y como lo hacía su acompañante y cuando volvía a existir se preguntaba si acaso estará llegando al fin de los tiempos.
 
+<img className="w-[90%] mx-auto" src='https://xvifyrqivqsozuhckqte.supabase.co/storage/v1/object/sign/Images/_MG_3716.jpg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1cmwiOiJJbWFnZXMvX01HXzM3MTYuanBnIiwiaWF0IjoxNzE5Njk0NjYzLCJleHAiOjIwMzUwNTQ2NjN9.l5HyR0ud8JhBKgWZtdPZfq5ekQIbmM-ZIsAsszgGk8Y'/>
+
 Poco a poco, empezaba a notar como su cuerpo empezaba a deteriorarse, —a lo mejor lo que se acaba es sólo mi tiempo—se decía a si mismo—. Algunas partes de su cuerpo estaban dejando de aparecerse luego de desaparecer y sus alas se estaban agujereando, entonces el alado ya no era ni tan alado ni tan hormiga pues estaba notando que se estaba empezando a parecer a su acompañante. Seguían viajando tan rápido como de costumbre, las cumbres de las montañas pasaban justo por debajo y ya casi no le quedaban alas para volar. Se asustaba, pero luego se calmaba porque sabía en realidad que no eran sus alas lo que le permitía alcanzar a los tiempos y sobrevolar distancias, era evidente que algo o alguien más estaba llevándolo, no sabía como lo hacía pero no podían ser sus alas; a su lado seguía acompañado por el semiser, regocijándose por su nueva compañía.
 
 Un día, el hormigón dorado dejó de ser hormiga y dejó de ser alado, finalmente se puso tan pequeño como una obrera y tan misterioso como su acompañante. Había logrado por fin volar más rápido que ninguna otra hormiga y se había alejado de la colonia más que ninguna otra, seguirá volando hasta dejar de existir.
+
