--- a/src/content/projects/language-spin.mdx
+++ b/src/content/projects/language-spin.mdx
@@ -3,5 +3,10 @@ pubDate: 2024-03-03
 author: Agustin Rojas
 title: Language Spin
 description: "Embark on a cosmic journey with astro.js, the framework that makes interstellar development a breeze. Pair it with Tailwind CSS for a design that's out of this world"
+images: ['https://xvifyrqivqsozuhckqte.supabase.co/storage/v1/object/sign/Images/_MG_3709.jpg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1cmwiOiJJbWFnZXMvX01HXzM3MDkuanBnIiwiaWF0IjoxNzE5Njk0NzE4LCJleHAiOjIwMzUwNTQ3MTh9.OmCWGuDjkXBsgDr_YTgOn0xYGhvnfX7rd2Y9-bY-bcc',https://xvifyrqivqsozuhckqte.supabase.co/storage/v1/object/sign/Images/_MG_3716.jpg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1cmwiOiJJbWFnZXMvX01HXzM3MTYuanBnIiwiaWF0IjoxNzE5Njk0NjYzLCJleHAiOjIwMzUwNTQ2NjN9.l5HyR0ud8JhBKgWZtdPZfq5ekQIbmM-ZIsAsszgGk8Y]
 ---
 
+import  ProjectImages  from '../../components/atoms/ProjectImages.tsx'
+
+    <ProjectImages client:only images={frontmatter.images}/>
+This is a language course platform, I worked at this project as a team made up of the best students of the latest bootcamps of web development and web design at 'Coderhouse' an e-learning platform based in Argentina, so it was a excelent job experience and the result was this site made for a language course institute. They teach English, Spanish, Italian and Portuguese.
