--- a/src/content/projects/language-spin.mdx
+++ b/src/content/projects/language-spin.mdx
@@ -3,7 +3,12 @@ pubDate: 2024-03-03
 author: Agustin Rojas
 title: Language Spin
 description: "Embark on a cosmic journey with astro.js, the framework that makes interstellar development a breeze. Pair it with Tailwind CSS for a design that's out of this world"
-images: ['https://xvifyrqivqsozuhckqte.supabase.co/storage/v1/object/sign/Images/_MG_3709.jpg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1cmwiOiJJbWFnZXMvX01HXzM3MDkuanBnIiwiaWF0IjoxNzE5Njk0NzE4LCJleHAiOjIwMzUwNTQ3MTh9.OmCWGuDjkXBsgDr_YTgOn0xYGhvnfX7rd2Y9-bY-bcc',https://xvifyrqivqsozuhckqte.supabase.co/storage/v1/object/sign/Images/_MG_3716.jpg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1cmwiOiJJbWFnZXMvX01HXzM3MTYuanBnIiwiaWF0IjoxNzE5Njk0NjYzLCJleHAiOjIwMzUwNTQ2NjN9.l5HyR0ud8JhBKgWZtdPZfq5ekQIbmM-ZIsAsszgGk8Y]
+images: [
+    'https://xvifyrqivqsozuhckqte.supabase.co/storage/v1/object/public/Images/language-spin/ls1.png?t=2024-07-07T01%3A02%3A28.380Z',
+https://xvifyrqivqsozuhckqte.supabase.co/storage/v1/object/public/Images/language-spin/ls2.png?t=2024-07-07T01%3A02%3A45.328Z,
+https://xvifyrqivqsozuhckqte.supabase.co/storage/v1/object/public/Images/language-spin/ls3mobile.png?t=2024-07-07T01%3A03%3A04.326Z,
+https://xvifyrqivqsozuhckqte.supabase.co/storage/v1/object/public/Images/language-spin/ls4mobile.png
+]
 ---
 
 import  ProjectImages  from '../../components/atoms/ProjectImages.tsx'
