--- a/src/content/projects/giftoky.mdx
+++ b/src/content/projects/giftoky.mdx
@@ -13,4 +13,4 @@ import  ProjectImages  from '../../components/atoms/ProjectImages.tsx'
 
 <ProjectImages client:only images={frontmatter.images}/>
 
-I worked as a developer of the GIFTOKY app, the app was already in development when I joined the project but it was not working properly, now is entering the public beta. Giftoky works as a wishlist app but with a social component, so you can share your wishlist and interact with your friends wishlists by marking as reserved wish or given wish and more.
+GIFTOKY® is an app that allows users to note and share gift ideas, transforming them into meaningful presents. Developed with React Native and Expo for the front-end, it ensures an efficient user experience, while the back-end is powered by Node.js and WordPress. The app facilitates the creation of personalized wish lists and social interaction, enabling users to follow friends' profiles and anonymously reserve gifts. GIFTOKY® streamlines gift planning and prevents duplicate presents, offering a free and accessible solution to enhance the quality and significance of received gifts. I joined the project after a year of prior development, resuming the paused work and successfully getting the app to work correctly on both iOS and Android.
