--- a/src/content/projects/tickets.mdx
+++ b/src/content/projects/tickets.mdx
@@ -3,5 +3,13 @@ pubDate: 2023-10-12
 author: Agustin Rojas
 title: Tickets
 description: "Embark on a cosmic journey with astro.js, the framework that makes interstellar development a breeze. Pair it with Tailwind CSS for a design that's out of this world"
-
+images: [
+  "https://xvifyrqivqsozuhckqte.supabase.co/storage/v1/object/public/Images/tickets/Capture-2024-08-17-131855.png",
+  "https://xvifyrqivqsozuhckqte.supabase.co/storage/v1/object/public/Images/tickets/Captura%20de%20pantalla%202024-08-17%20a%20la(s)%2013.19.33.png?t=2024-08-17T17%3A21%3A28.725Z"
+]
 ---
+import  ProjectImages  from '../../components/atoms/ProjectImages.tsx'
+
+<ProjectImages client:only images={frontmatter.images}/>
+
+Tickets is a system where clients create tickets for the Tipddy's team to tackle any project-related issues. The app is built with React for the user interface, using Jotai for state management and Tailwind for styling. On the backend, it runs on WordPress with PHP. We’ve also integrated automation and bots to handle email notifications to both clients and our team. Plus, the Slack API is used to send us alerts about new tickets or messages from clients, keeping everyone in the loop.
