--- a/src/content/projects/torchnd.mdx
+++ b/src/content/projects/torchnd.mdx
@@ -14,4 +14,4 @@ import  ProjectImages  from '../../components/atoms/ProjectImages.tsx'
 
 <ProjectImages client:only images={frontmatter.images}/>
 
-Torchnd is basically a booking app, like Airnb but with fictional places and hosts. For the development of the app I used expo and it works on Android and iOS, it was my first aproach to app development and desing. The app has been gamified with the creative and fast help of IAs.
+Torchnd is basically a booking app like Airbnb, but with a fun twist—it's all about fictional places and hosts. I built it using Expo, and it works smoothly on both Android and iOS. This was my first dive into app development and design, and it’s been a great learning journey. I also added some cool gamification features with the quick help of AI to make the experience more engaging.
