--- a/src/content/projects/fide.mdx
+++ b/src/content/projects/fide.mdx
@@ -1,7 +1,7 @@
 ---
 pubDate: 2024-23-06
 author: Agustin Rojas
-title: Giftoky
+title: FIDE app
 description: "Embark on a cosmic journey with astro.js, the framework that makes interstellar development a breeze. Pair it with Tailwind CSS for a design that's out of this world"
 images:
     [
@@ -13,7 +13,7 @@ images:
 
 import ProjectImages from "../../components/atoms/ProjectImages.tsx";
 import expo from "@/assets/icons/expo.svg";
-import javascript from "@/assets/icons/javascript.svg";
+import flutterflow from "@/assets/icons/flutterflow.jpeg";
 import wordpress from "@/assets/icons/wordpress.svg";
 import php from "@/assets/icons/php.svg";
 import express  from "@/assets/icons/express.svg";
@@ -21,17 +21,14 @@ import { Image } from "astro:assets";
 
 <ProjectImages client:only images={frontmatter.images} />
 
-GIFTOKY® is an app that allows users to note and share gift ideas, transforming them into meaningful presents. Developed with React Native and Expo for the front-end, it ensures an efficient user experience, while the back-end is powered by Node.js and WordPress. The app facilitates the creation of personalized wish lists and social interaction, enabling users to follow friends' profiles and anonymously reserve gifts. GIFTOKY® streamlines gift planning and prevents duplicate presents, offering a free and accessible solution to enhance the quality and significance of received gifts. I joined the project after a year of prior development, resuming the paused work and successfully getting the app to work correctly on both iOS and Android. The app is now entering a public beta phase, welcoming users to test its features and provide feedback.
+
+Me and my team developed this mobile app for the Federation of Private Educational Institutions (FIDE) in Chile, designed to connect school teams affiliated with FIDE. The app provides a platform for communication, delivering news, and sending relevant notifications to the educational community. Built using Flutterflow and Dart for the front-end, with WordPress (ACF) and PHP handling the back-end, it enables seamless interaction between members, keeping them informed and connected. The app is a vital tool for FIDE-affiliated schools to stay updated on institutional matters and collaborate more effectively.
+
 <div className="not-prose">
 <div> <p className="font-chrono text-platinum text-4xl tracking-wide ">Stack</p></div>
 <div className="flex gap-2">
 <Image
-    src={expo}
-    alt="react"
-    class="rounded-md w-12 tablet:w-16 laptop:w-16"
-/>
-<Image
-    src={javascript}
+    src={flutterflow}
     alt="javascript"
     class="rounded-md w-12 tablet:w-16 laptop:w-16"
 />
@@ -42,11 +39,6 @@ GIFTOKY® is an app that allows users to note and share gift ideas, transforming
 />
 <Image
     src={php}
-    alt="wordpress"
-    class="rounded-md w-12 tablet:w-16 laptop:w-16"
-/>
-<Image
-    src={express}
     alt="wordpress"
     class="rounded-md w-12 tablet:w-16 laptop:w-16"
 />
