--- a/src/content/projects/fideform.mdx
+++ b/src/content/projects/fideform.mdx
@@ -1,7 +1,7 @@
 ---
 pubDate: 2024-23-06
 author: Agustin Rojas
-title: Giftoky
+title: FIDE Form
 description: "Embark on a cosmic journey with astro.js, the framework that makes interstellar development a breeze. Pair it with Tailwind CSS for a design that's out of this world"
 images:
     [
@@ -13,26 +13,28 @@ images:
 
 import ProjectImages from "../../components/atoms/ProjectImages.tsx";
 import expo from "@/assets/icons/expo.svg";
-import javascript from "@/assets/icons/javascript.svg";
+import astro from "@/assets/icons/astro.svg";
 import wordpress from "@/assets/icons/wordpress.svg";
 import php from "@/assets/icons/php.svg";
-import express  from "@/assets/icons/express.svg";
+import TypeScript  from "@/assets/icons/typescript.svg";
 import { Image } from "astro:assets";
 
 <ProjectImages client:only images={frontmatter.images} />
 
-GIFTOKY® is an app that allows users to note and share gift ideas, transforming them into meaningful presents. Developed with React Native and Expo for the front-end, it ensures an efficient user experience, while the back-end is powered by Node.js and WordPress. The app facilitates the creation of personalized wish lists and social interaction, enabling users to follow friends' profiles and anonymously reserve gifts. GIFTOKY® streamlines gift planning and prevents duplicate presents, offering a free and accessible solution to enhance the quality and significance of received gifts. I joined the project after a year of prior development, resuming the paused work and successfully getting the app to work correctly on both iOS and Android. The app is now entering a public beta phase, welcoming users to test its features and provide feedback.
+
+I developed a website that facilitates the registration process for the FIDE App, allowing one or more members from educational institutions to sign up. The site is integrated with a school database, enabling dynamic queries and registrations based on the institution selected by the user. The front-end is built with Astro and TypeScript, ensuring a fast and modern user experience, while the back-end uses WordPress (ACF) and PHP for managing the data and processes. This site streamlines the enrollment process for FIDE-affiliated schools, making it easier to onboard multiple users efficiently.
+
 <div className="not-prose">
 <div> <p className="font-chrono text-platinum text-4xl tracking-wide ">Stack</p></div>
 <div className="flex gap-2">
 <Image
-    src={expo}
-    alt="react"
+    src={astro}
+    alt="astro"
     class="rounded-md w-12 tablet:w-16 laptop:w-16"
 />
 <Image
-    src={javascript}
-    alt="javascript"
+    src={TypeScript}
+    alt="wordpress"
     class="rounded-md w-12 tablet:w-16 laptop:w-16"
 />
 <Image
@@ -42,11 +44,6 @@ GIFTOKY® is an app that allows users to note and share gift ideas, transforming
 />
 <Image
     src={php}
-    alt="wordpress"
-    class="rounded-md w-12 tablet:w-16 laptop:w-16"
-/>
-<Image
-    src={express}
     alt="wordpress"
     class="rounded-md w-12 tablet:w-16 laptop:w-16"
 />
