--- a/src/content/projects/fide.mdx
+++ b/src/content/projects/fide.mdx
@@ -5,9 +5,7 @@ title: FIDE app
 description: "Embark on a cosmic journey with astro.js, the framework that makes interstellar development a breeze. Pair it with Tailwind CSS for a design that's out of this world"
 images:
     [
-        "https://xvifyrqivqsozuhckqte.supabase.co/storage/v1/object/public/Images/giftoky/giftoky1.png?t=2024-07-07T06%3A56%3A36.918Z",
-        "https://xvifyrqivqsozuhckqte.supabase.co/storage/v1/object/public/Images/giftoky/giftoky3.png?t=2024-07-07T06%3A56%3A51.842Z",
-        "https://xvifyrqivqsozuhckqte.supabase.co/storage/v1/object/public/Images/giftoky/giftoky4.png?t=2024-07-07T06%3A56%3A58.555Z",
+
     ]
 ---
 
@@ -22,7 +20,7 @@ import { Image } from "astro:assets";
 <ProjectImages client:only images={frontmatter.images} />
 
 
-Me and my team developed this mobile app for the Federation of Private Educational Institutions (FIDE) in Chile, designed to connect school teams affiliated with FIDE. The app provides a platform for communication, delivering news, and sending relevant notifications to the educational community. Built using Flutterflow and Dart for the front-end, with WordPress (ACF) and PHP handling the back-end, it enables seamless interaction between members, keeping them informed and connected. The app is a vital tool for FIDE-affiliated schools to stay updated on institutional matters and collaborate more effectively.
+My team and I developed this mobile app for the Federation of Private Educational Institutions (FIDE) in Chile, designed to connect school teams affiliated with FIDE. The app provides a platform for communication, delivering news, and sending relevant notifications to the educational community. Built using Flutterflow and Dart for the front-end, with WordPress (ACF) and PHP handling the back-end, it enables seamless interaction between members, keeping them informed and connected. The app is a vital tool for FIDE-affiliated schools to stay updated on institutional matters and collaborate more effectively.
 
 <div className="not-prose">
 <div> <p className="font-chrono text-platinum text-4xl tracking-wide ">Stack</p></div>
