--- a/src/content/projects/arts.mdx
+++ b/src/content/projects/arts.mdx
@@ -2,6 +2,10 @@
 pubDate: 2024-03-03
 author: Agustin Rojas
 title: Arts
-description: "Embark on a cosmic journey with astro.js, the framework that makes interstellar development a breeze. Pair it with Tailwind CSS for a design that's out of this world"
+description: "Explore the diverse world of my artistic projects, from ceramics to digital artwork, sound art, and radiotheater."
 
 ---
+
+Take a look at the different kinds of art I've made over my lifetime. I've worked with many materials and disciplines, each one giving me a new way to show my creativity.
+
+My work includes shaping and painting with ceramics and acrylics. I have also ventured into digital artwork, creating pieces that feel both new and timeless. Additionally, I've explored sound manipulation in theater, crafting stories by mixing sounds and performances.
