--- a/src/content/projects/hojas.mdx
+++ b/src/content/projects/hojas.mdx
@@ -1,7 +1,7 @@
 ---
 pubDate: 2024-23-06
 author: Agustin Rojas
-title: My Notes
+title: Hojas
 description: "Embark on a cosmic journey with astro.js, the framework that makes interstellar development a breeze. Pair it with Tailwind CSS for a design that's out of this world"
 images:
     [
@@ -49,8 +49,6 @@ The app offers a distraction-free environment, allowing users to focus on their 
     alt="react"
     class="rounded-md w-12 tablet:w-16 laptop:w-16"
 />
-
-
 </div>
 
 </div>
