--- a/src/content/projects/macro.mdx
+++ b/src/content/projects/macro.mdx
@@ -6,3 +6,6 @@ description: "Embark on a cosmic journey with astro.js, the framework that makes
 
 ---
 
+Although I primarily work as a software engineer, photography has become a way for me to explore my into my creative side. This gallery showcases my work as a macro photographer, with a focus on bugs. Rather than aiming for extreme close-ups, I’m more interested in capturing the character of the subject and how it interacts with its surroundings.
+
+Whether it’s the texture of a leaf or the lines of a branch, I spend hours waiting for the right moment. It’s almost meditative, watching and waiting for the insect to settle into the perfect position, where it naturally blends with and expresses something unique within its environment.
