--- a/src/content/projects/giftoky.mdx
+++ b/src/content/projects/giftoky.mdx
@@ -20,10 +20,27 @@ import php from "@/assets/icons/php.svg";
 import express  from "@/assets/icons/express.svg";
 import { Image } from "astro:assets";
 
-<ProjectImages client:only images={frontmatter.images} />
 
+<div className="flex flex-col laptop:flex-row laptop:items-center w-[80%] mx-auto px-4 self-center not-prose">
+<Image
+    src='https://xvifyrqivqsozuhckqte.supabase.co/storage/v1/object/public/Images/giftoky/giftoky1.png?t=2024-07-07T06%3A56%3A36.918Z'
+    alt="react"
+    width={1600}
+    height={900}
+    class="aspect-video object-contain rounded-md "
+/>
+
+</div>
 GIFTOKY® is an app that allows users to note and share gift ideas, transforming them into meaningful presents. Developed with React Native and Expo for the front-end, it ensures an efficient user experience, while the back-end is powered by Node.js and WordPress. The app facilitates the creation of personalized wish lists and social interaction, enabling users to follow friends' profiles and anonymously reserve gifts.
-
+<div className="flex flex-col laptop:flex-row laptop:items-center w-[80%] mx-auto px-4 self-center not-prose">
+<Image
+    src='https://xvifyrqivqsozuhckqte.supabase.co/storage/v1/object/public/Images/giftoky/giftoky3.png?t=2024-07-07T06%3A56%3A51.842Z'
+    alt="react"
+    width={1600}
+    height={900}
+    class="aspect-video object-contain rounded-md"
+/>
+</div>
 GIFTOKY® streamlines gift planning and prevents duplicate presents, offering a free and accessible solution to enhance the quality and significance of received gifts. I joined the project after a year of prior development, resuming the paused work and successfully getting the app to work correctly on both iOS and Android. The app is now entering a public beta phase, welcoming users to test its features and provide feedback.
 
 <div className="not-prose">
