--- a/src/content/projects/macro.mdx
+++ b/src/content/projects/macro.mdx
@@ -3,9 +3,32 @@ pubDate: 2024-03-03
 author: Agustin Rojas
 title: Macro photography
 description: "Embark on a cosmic journey with astro.js, the framework that makes interstellar development a breeze. Pair it with Tailwind CSS for a design that's out of this world"
-
+images: [
+        "https://xvifyrqivqsozuhckqte.supabase.co/storage/v1/object/public/Images/macrophoto/_MG_2292%201.jpg",
+        ]
 ---
 
+import { Image } from "astro:assets";
+import LightboxImages from '../../components/atoms/Lightbox.tsx'
+ 
 Although I primarily work as a software engineer, photography has become a way for me to explore my into my creative side. This gallery showcases my work as a macro photographer, with a focus on bugs. Rather than aiming for extreme close-ups, I’m more interested in capturing the character of the subject and how it interacts with its surroundings.
 
 Whether it’s the texture of a leaf or the lines of a branch, I spend hours waiting for the right moment. It’s almost meditative, watching and waiting for the insect to settle into the perfect position, where it naturally blends with and expresses something unique within its environment.
+
+<div>
+  <div class="float-left w-1/2 pr-4">
+    
+  </div>
+  <div class="float-left w-1/2">
+    <LightboxImages images={frontmatter.images} client:load>
+    <Image
+        src={frontmatter.images[0]}
+        alt="react"
+        inferSize
+        class="rounded-md "
+    />
+</LightboxImages>
+  </div>
+  <div class="clear-both"></div>
+</div>
+
