--- a/src/content/projects/macro.mdx
+++ b/src/content/projects/macro.mdx
@@ -5,6 +5,18 @@ title: Macro photography
 description: "Embark on a cosmic journey with astro.js, the framework that makes interstellar development a breeze. Pair it with Tailwind CSS for a design that's out of this world"
 images: [
         "https://xvifyrqivqsozuhckqte.supabase.co/storage/v1/object/public/Images/macrophoto/_MG_2292%201.jpg",
+        "https://xvifyrqivqsozuhckqte.supabase.co/storage/v1/object/public/Images/macrophoto/_MG_2454.jpg",
+        "https://xvifyrqivqsozuhckqte.supabase.co/storage/v1/object/public/Images/macrophoto/_MG_2588.jpg?t=2024-10-20T19%3A46%3A54.946Z",
+        "https://xvifyrqivqsozuhckqte.supabase.co/storage/v1/object/public/Images/macrophoto/_MG_2868%20(1).jpg",
+        "https://xvifyrqivqsozuhckqte.supabase.co/storage/v1/object/public/Images/macrophoto/_MG_3079.jpg",
+        "https://xvifyrqivqsozuhckqte.supabase.co/storage/v1/object/public/Images/macrophoto/_MG_3221%202.jpg",
+        "https://xvifyrqivqsozuhckqte.supabase.co/storage/v1/object/public/Images/macrophoto/_MG_3419.jpg",
+        "https://xvifyrqivqsozuhckqte.supabase.co/storage/v1/object/public/Images/macrophoto/_MG_3494.jpg?t=2024-10-20T19%3A47%3A49.281Z",
+        "https://xvifyrqivqsozuhckqte.supabase.co/storage/v1/object/public/Images/macrophoto/_MG_3501%202.jpg",
+        "https://xvifyrqivqsozuhckqte.supabase.co/storage/v1/object/public/Images/macrophoto/_MG_4493.jpg?t=2024-10-20T19%3A48%3A07.651Z",
+        "https://xvifyrqivqsozuhckqte.supabase.co/storage/v1/object/public/Images/macrophoto/_MG_4493.jpg?t=2024-10-20T19%3A48%3A07.651Z",
+        "https://xvifyrqivqsozuhckqte.supabase.co/storage/v1/object/public/Images/macrophoto/_MG_4562.jpg",
+        "https://xvifyrqivqsozuhckqte.supabase.co/storage/v1/object/public/Images/macrophoto/_MG_4740%202.jpg?t=2024-10-20T19%3A48%3A33.315Z"
         ]
 ---
 
@@ -15,20 +27,224 @@ Although I primarily work as a software engineer, photography has become a way f
 
 Whether it’s the texture of a leaf or the lines of a branch, I spend hours waiting for the right moment. It’s almost meditative, watching and waiting for the insect to settle into the perfect position, where it naturally blends with and expresses something unique within its environment.
 
-<div>
-  <div class="float-left w-1/2 pr-4">
-    
+<div className='not-prose flex flex-col gap-4'>
+<div className='flex justify-around flex-col tablet:flex-row'>
+  <div class="flex justify-end items-end tablet:p-4 tablet:w-1/3 ">
+    <p>
+      Reduviidae nymph on quartz geode
+    </p>
   </div>
-  <div class="float-left w-1/2">
-    <LightboxImages images={frontmatter.images} client:load>
+  <div class="tablet:w-2/3 ">
+    <LightboxImages images={frontmatter.images[0]} client:load>
     <Image
         src={frontmatter.images[0]}
         alt="react"
         inferSize
         class="rounded-md "
     />
-</LightboxImages>
+    </LightboxImages>
   </div>
   <div class="clear-both"></div>
 </div>
 
+
+
+<div className='flex justify-around flex-col tablet:flex-row'>
+  <div class="flex justify-end items-end tablet:p-4 tablet:w-1/3 ">
+    <p>
+      Psilobora picta 
+    </p>
+  </div>
+  <div class="tablet:w-2/3 ">
+    <LightboxImages images={frontmatter.images[1]} client:load>
+    <Image
+        src={frontmatter.images[1]}
+        alt="react"
+        inferSize
+        class="rounded-md "
+    />
+    </LightboxImages>
+  </div>
+  <div class="clear-both"></div>
+</div>
+
+
+
+<div className='flex justify-around flex-col tablet:flex-row'>
+  <div class="flex justify-end items-end tablet:p-4 tablet:w-1/3 ">
+    <p>
+      Falling fly
+    </p>
+  </div>
+  <div class="tablet:w-2/3 ">
+    <LightboxImages images={frontmatter.images[2]} client:load>
+    <Image
+        src={frontmatter.images[2]}
+        alt="react"
+        inferSize
+        class="rounded-md "
+    />
+    </LightboxImages>
+  </div>
+  <div class="clear-both"></div>
+</div>
+
+
+
+
+<div className='flex justify-around flex-col tablet:flex-row'>
+  <div class="flex justify-end items-end tablet:p-4 tablet:w-1/3 ">
+    <p>
+     Just a beetle on a snail.
+    </p>
+  </div>
+  <div class="tablet:w-2/3 ">
+    <LightboxImages images={frontmatter.images[3]} client:load>
+    <Image
+        src={frontmatter.images[3]}
+        alt="react"
+        inferSize
+        class="rounded-md "
+    />
+    </LightboxImages>
+  </div>
+  <div class="clear-both"></div>
+</div>
+
+
+
+
+<div className='flex justify-around flex-col tablet:flex-row'>
+  <div class="flex justify-end items-end tablet:p-4 tablet:w-1/3 ">
+    <p>
+      A ghost
+    </p>
+  </div>
+  <div class="tablet:w-2/3 ">
+    <LightboxImages images={frontmatter.images[4]} client:load>
+    <Image
+        src={frontmatter.images[4]}
+        alt="react"
+        inferSize
+        class="rounded-md "
+    />
+    </LightboxImages>
+  </div>
+  <div class="clear-both"></div>
+</div>
+
+
+
+
+
+<div className='flex justify-around flex-col tablet:flex-row'>
+  <div class="flex justify-end items-end tablet:p-4 tablet:w-1/3 ">
+    <p>
+      Psillobora Picta and quartz
+    </p>
+  </div>
+  <div class="tablet:w-2/3 ">
+    <LightboxImages images={frontmatter.images[5]} client:load>
+    <Image
+        src={frontmatter.images[5]}
+        alt="react"
+        inferSize
+        class="rounded-md "
+    />
+    </LightboxImages>
+  </div>
+  <div class="clear-both"></div>
+</div>
+
+
+
+
+<div className='flex justify-around flex-col tablet:flex-row'>
+  <div class="flex justify-end items-end tablet:p-4 tablet:w-1/3 ">
+    <p>
+       Mealybug
+    </p>
+  </div>
+  <div class="tablet:w-2/3 ">
+    <LightboxImages images={frontmatter.images[6]} client:load>
+    <Image
+        src={frontmatter.images[6]}
+        alt="react"
+        inferSize
+        class="rounded-md "
+    />
+    </LightboxImages>
+  </div>
+  <div class="clear-both"></div>
+</div>
+
+
+
+
+
+<div className='flex justify-around flex-col tablet:flex-row'>
+  <div class="flex justify-end items-end tablet:p-4 tablet:w-1/3 ">
+    <p>
+      Salticidae watching a geode
+    </p>
+  </div>
+  <div class="tablet:w-2/3 ">
+    <LightboxImages images={frontmatter.images[7]} client:load>
+    <Image
+        src={frontmatter.images[7]}
+        alt="react"
+        inferSize
+        class="rounded-md "
+    />
+    </LightboxImages>
+  </div>
+  <div class="clear-both"></div>
+</div>
+
+
+
+
+
+<div className='flex justify-around flex-col tablet:flex-row'>
+  <div class="flex justify-end items-end tablet:p-4 tablet:w-1/3 ">
+    <p>
+      Salticidae and fly
+    </p>
+  </div>
+  <div class="tablet:w-2/3 ">
+    <LightboxImages images={frontmatter.images[8]} client:load>
+    <Image
+        src={frontmatter.images[8]}
+        alt="react"
+        inferSize
+        class="rounded-md "
+    />
+    </LightboxImages>
+  </div>
+  <div class="clear-both"></div>
+</div>
+
+
+
+<div className='flex justify-around flex-col tablet:flex-row'>
+  <div class="flex justify-end items-end tablet:p-4 tablet:w-1/3 ">
+    <p>
+      Xylocopa
+    </p>
+  </div>
+  <div class="tablet:w-2/3 ">
+    <LightboxImages images={frontmatter.images[9]} client:load>
+    <Image
+        src={frontmatter.images[9]}
+        alt="react"
+        inferSize
+        class="rounded-md "
+    />
+    </LightboxImages>
+  </div>
+  <div class="clear-both"></div>
+</div>
+
+
+
+</div>
